--- a/_deps/docker-compose.yml
+++ b/_deps/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3.7"
 services:
-  db:
-    container_name: "cezedd-dev-pg"
-    image: "mdillon/postgis:11"
+  db-golang-coding-prep:
+    container_name: "golang-coding-prep"
+    image: "postgres:12"
     volumes:
-      - ./pg-init-scripts:/docker-entrypoint-initdb.d
-      - cezedd-dev-pg:/var/lib/postgresql/data
+#      - ./pg-init-scripts:/docker-entrypoint-initdb.d
+      - golang-coding-prep-pg:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_MULTIPLE_DATABASES=partitioning
+      - POSTGRES_DB=partitioning
     ports:
       - "15432:5432"
 volumes:
-  cezedd-dev-pg:
+  golang-coding-prep-pg:
